Remove commons lang3 dependency